added 'Report a Bug' link in the action bar https://bugs.eclipse.org/bugs/show_bug.cgi?id=477570

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/src/org/eclipse/dirigible/ide/ui/rap/entry/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/src/org/eclipse/dirigible/ide/ui/rap/entry/messages.properties
@@ -3,10 +3,11 @@ DirigibleActionBarAdvisor_COULD_NOT_OPEN_WEB_PAGE=Could not open web page.
 DirigibleActionBarAdvisor_FILE=File
 DirigibleActionBarAdvisor_HELP=Help
 DirigibleActionBarAdvisor_RUNNING_ON_RAP_VERSION=Running on RAP version 
-DirigibleActionBarAdvisor_DIRIGIBLE_HOME=Project
+DirigibleActionBarAdvisor_DIRIGIBLE_HOME=Site
 DirigibleActionBarAdvisor_DIRIGIBLE_HELP=Help Contents
 DirigibleActionBarAdvisor_DIRIGIBLE_SAMPLES=Samples
 DirigibleActionBarAdvisor_DIRIGIBLE_FORUM=Forum
+DirigibleActionBarAdvisor_DIRIGIBLE_BUG=Report a Bug
 DirigibleActionBarAdvisor_SHOW_PERSPECTIVE=Show Perspective
 DirigibleActionBarAdvisor_SHOW_VIEW=Show View
 DirigibleActionBarAdvisor_WEB_PAGE_ERROR=Web Page Error
