Error message on Publish in case of missing Operator role https://bugs.eclipse.org/bugs/show_bug.cgi?id=480120

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.publish/src/org/eclipse/dirigible/ide/publish/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.publish/src/org/eclipse/dirigible/ide/publish/messages.properties
@@ -7,5 +7,7 @@ AbstractPublisher.PUBLISH_OF_FOLDER_S_BY_S_OVERRIDES_THE_PREVIOUS_MODIFICATIONS_
 AbstractPublisher.PUBLISH_OF_FOLDER_S_SKIPPED=Publish of folder: %s skipped
 PublishManager.COULD_NOT_CREATE_PUBLISHER_INSTANCE=Could not create publisher instance %s
 PublishManager.EXTENSION_POINT_0_COULD_NOT_BE_FOUND=Extension point ''{0}'' could not be found.
+PublishManager.PUBLISH_ERROR=Publish Error
 PublishManager.PUBLISHER_EXTENSION_HAS_AN_INVALID_IMPLEMENTING_CLASS_CONFIGURED=Publisher extension has an invalid implementing class configured.
+PublishManager.THE_USER_S_DOES_NOT_HAVE_OPERATOR_ROLE_TO_PERFORM_PUBLISH_OPERATION=The user %s, does not have 'Operator' role to perform 'Publish' operation.
 PublishManager.UNKNOWN_SELECTION_TYPE=Unknown selection type.
