Run on Dirigible - initial https://bugs.eclipse.org/bugs/show_bug.cgi?id=486541

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/src/org/eclipse/dirigible/ide/ui/rap/entry/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/src/org/eclipse/dirigible/ide/ui/rap/entry/messages.properties
@@ -13,5 +13,5 @@ DirigibleActionBarAdvisor_SHOW_VIEW=Show View
 DirigibleActionBarAdvisor_WEB_PAGE_ERROR=Web Page Error
 DirigibleActionBarAdvisor_WINDOW=Window
 DirigibleActionBarAdvisor_WORKBENCH=\ Workbench
-DirigibleWorkbench_ARE_YOU_SURE_YOU_WANT_TO_QUIT=Are you sure you want to quit 
+DirigibleWorkbench_ARE_YOU_SURE_YOU_WANT_TO_QUIT=Are you sure you want to quit %s
 DirigibleWorkbenchWindowAdvisor_WORKBENCH=\ Workbench
