dynamic version fix

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/src/org/eclipse/dirigible/ide/ui/rap/entry/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.ui.rap/src/org/eclipse/dirigible/ide/ui/rap/entry/messages.properties
@@ -2,7 +2,7 @@ DirigibleActionBarAdvisor_ABOUT=About
 DirigibleActionBarAdvisor_COULD_NOT_OPEN_WEB_PAGE=Could not open web page.
 DirigibleActionBarAdvisor_FILE=File
 DirigibleActionBarAdvisor_HELP=Help
-DirigibleActionBarAdvisor_RUNNING_ON_RAP_VERSION=Running on RAP version 
+DirigibleActionBarAdvisor_RUNNING_ON_RAP_VERSION=RAP Version: 
 DirigibleActionBarAdvisor_DIRIGIBLE_HOME=Site
 DirigibleActionBarAdvisor_DIRIGIBLE_HELP=Help Contents
 DirigibleActionBarAdvisor_DIRIGIBLE_SAMPLES=Samples
