--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/ui/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/ui/messages.properties
@@ -10,6 +10,7 @@ BaseCommandDialog_USERNAME=Username
 PushCommandDialog_COMMIT_MESSAGE_IS_EMPTY=Commit message is empty
 PushCommandDialog_EMAIL=Email
 PushCommandDialog_EMAIL_IS_EMPTY=Email is empty
-CommandDialog_REPOSITORY_URI=Repository URI
+CommandDialog_REPOSITORY_URI=Location
+CommandDialog_REPOSITORY_BRANCH=Branch
 ShareCommandDialog_REPOSITORY_URI_IS_EMPTY=Repository URI is empty
 ShareCommandDialog_SHARE_TO_REMOTE_GIT_REPOSITORY=Share to Remote Git Repository
