clone dependencies during clone + clone dependencies explicit action https://bugs.eclipse.org/bugs/show_bug.cgi?id=501416

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/messages.properties
@@ -3,45 +3,47 @@ CloneCommandHandler_MASTER=Please check if proxy settings are set properly
 CloneCommandHandler_NO_REMOTE_REPOSITORY_FOR=No remote repository for:\n
 CloneCommandHandler_PROJECT_WAS_CLONED=Project %s was cloned\!
 CloneCommandHandler_TASK_CLONING_REPOSITORY=Cloning Repository
-CloneCommandHandler_WHILE_CLONING_REPOSITORY_ERROR_OCCURED=While cloning repository error occured.\n
+CloneCommandHandler_WHILE_CLONING_REPOSITORY_ERROR_OCCURED=An error occurred while cloning repository.\n
+CloneCommandHandler_NOT_SUPPORTED_REPOSITORY_TYPE=Repository type is not supported: %s.\n
 HardResetCommandHandler_DO_YOU_REALLY_WANT_TO_HARD_RESET_PROJECT_S=Do you really want to "Hard Reset" project "%s"
 HardResetCommandHandler_ERROR_DURING_HARD_RESET=Error during hard reset
 HardResetCommandHandler_HARD_RESET=Hard reset
 HardResetCommandHandler_NO_PROJECT_IS_SELECTED_FOR_HARD_RESET=No project is selected for hard reset
 HardResetCommandHandler_ONLY_ONE_PROJECT_CAN_BE_HARD_RESETED_AT_A_TIME=Only one project can be hard reseted at a time
 HardResetCommandHandler_PLEASE_CHECK_IF_PROXY_SETTINGS_ARE_SET_PROPERLY=Please check if proxy settings are set properly
-HardResetCommandHandler_PLEASE_SELECT_ONE=Please select one
+HardResetCommandHandler_PLEASE_SELECT_ONE=Select a project
 HardResetCommandHandler_reset=\nIncorrect "username" and/or "password" or "Git repository URI"
-HardResetCommandHandler_WHILE_HARD_RESETING_PROJECT_ERROR_OCCURED=While hard reseting project "%s" error occured
+HardResetCommandHandler_WHILE_HARD_RESETING_PROJECT_ERROR_OCCURED=While hard reseting project "%s" error occurred
 PullCommandHandler_ERROR_DURING_PULL=Error during pull\!
-PullCommandHandler_NO_PROJECT_IS_SELECTED_FOR_PULL=No project is selected for pull\!
+PullCommandHandler_NO_PROJECT_IS_SELECTED_FOR_PULL=No project is selected for the Pull action\!
 PullCommandHandler_ONLY_ONE_PROJECT_CAN_BE_PULLEDT_AT_A_TIME=Only one project can be pulled at a time\!
 PullCommandHandler_PROJECT_HAS_BEEN_PULLED_FROM_REMOTE_REPOSITORY=Project has been pulled from remote repository\!
 PullCommandHandler_TASK_PULLING_FROM_REMOTE_REPOSITORY=Pulling from Remote Repository
-PullCommandHandler_WHILE_PULLING_PROJECT_ERROR_OCCURED=While pulling project %s error occured
+PullCommandHandler_WHILE_PULLING_PROJECT_ERROR_OCCURED=While pulling project %s error occurred
+CloneDependenciesCommandHandler_NO_PROJECT_IS_SELECTED_FOR_CLONE_DEPENDENCIES=No project is selected for the Clone Dependencies action\!
 PushCommandHandler_CONFLICTING_FILES=Conflicting file(s)
 PushCommandHandler_ERROR_DURING_PUSH=Error during pushing\!
 PushCommandHandler_INCORRECT_USERNAME_AND_OR_PASSWORD_OR_GIT_REPOSITORY_URI=\nIncorrect "username" and/or "password" or "Git repository URI"
-PushCommandHandler_NO_PROJECT_IS_SELECTED_FOR_PUSH=No project is selected for push\!
+PushCommandHandler_NO_PROJECT_IS_SELECTED_FOR_PUSH=No project is selected for the Push action\!
 PushCommandHandler_ONLY_ONE_PROJECT_CAN_BE_PUSHED_AT_A_TIME=Only one project can be pushed at a time\!
 PushCommandHandler_PLEASE_CHECK_IF_PROXY_SETTINGS_ARE_SET_PROPERLY=Please check if proxy settings are set properly
 PushCommandHandler_PLEASE_MERGE_TO_MASTER_AND_THEN_CONTINUE_WORKING_ON_PROJECT=Please merge to master and then continue working on project.
-PushCommandHandler_PLEASE_SELECT_ONE=Please select one
+PushCommandHandler_PLEASE_SELECT_ONE=Select a project
 PushCommandHandler_PROJECT_HAS_BEEN_PUSHED_TO_REMOTE_REPOSITORY=Project has been pushed to remote repository\!
-PushCommandHandler_PROJECT_HAS_D_CONFILCTING_FILES=Project has %d confilcting file(s).\n
-PushCommandHandler_PROJECT_HAS_D_CONFILCTING_FILES_DO_PUSH_OR_RESET=Project has %d confilcting file(s). You can use Push to submit your changes in a new branch for further merge or use Reset to remove your changes.\n
+PushCommandHandler_PROJECT_HAS_D_CONFILCTING_FILES=Project has %d conflicting file(s).\n
+PushCommandHandler_PROJECT_HAS_D_CONFILCTING_FILES_DO_PUSH_OR_RESET=Project has %d conflicting file(s). You can use Push to submit your changes in a new branch for further merge or use Reset to remove your changes.\n
 PushCommandHandler_PUSHED_TO_REMOTE_BRANCH_S=Pushed to remote branch "%s".\n
 PushCommandHandler_TASK_PUSHING_TO_REMOTE_REPOSITORY=Pushing to Remote Repository
 PushCommandHandler_THIS_IS_NOT_A_GIT_PROJECT=This is not a git project\!
-PushCommandHandler_WHILE_PUSHING_PROJECT_ERROR_OCCURED=While pushing project "%s" error occured
-ResetCommandHandler_PROJECT_S_SUCCESSFULY_RESETED=Project "%s" successfuly reseted
+PushCommandHandler_WHILE_PUSHING_PROJECT_ERROR_OCCURED=While pushing project "%s" error occurred
+ResetCommandHandler_PROJECT_S_SUCCESSFULY_RESETED=Project "%s" successfully reseted
 ResetCommandHandler_TASK_RESETING_PROJECT=Reseting Project
 ShareCommandHandler_ERROR_DURING_SHARE=Error during share\!
 ShareCommandHandler_INCORRECT_USERNAME_AND_OR_PASSWORD_OR_GIT_REPOSITORY_URI=\nIncorrect "username" and/or "password" or "Git repository URI"
-ShareCommandHandler_NO_PROJECT_IS_SELECTED_FOR_SHARE=No project is selected for share
+ShareCommandHandler_NO_PROJECT_IS_SELECTED_FOR_SHARE=No project is selected for Share action\!
 ShareCommandHandler_ONLY_ONE_PROJECT_CAN_BE_SHARED_AT_A_TIME=Only one project can be shared at a time\!
 ShareCommandHandler_PLEASE_CHECK_IF_PROXY_SETTINGS_ARE_SET_PROPERLY=Please check if proxy settings are set properly
-ShareCommandHandler_PLEASE_SELECT_ONE=Please select one
-ShareCommandHandler_PROJECT_S_SUCCESSFULY_SHARED=Project "%s" successfuly shared
+ShareCommandHandler_PLEASE_SELECT_ONE=Select a project
+ShareCommandHandler_PROJECT_S_SUCCESSFULY_SHARED=Project "%s" successfully shared
 ShareCommandHandler_TASK_SHARING_PROJECT=Sharing Project
-ShareCommandHandler_WHILE_SHARING_PROJECT_ERROR_OCCURED=While sharing project "%s" error occured
+ShareCommandHandler_WHILE_SHARING_PROJECT_ERROR_OCCURED=While sharing project "%s" error occurred
