--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/ui/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/ui/messages.properties
@@ -2,6 +2,8 @@ BaseCommandDialog_PASSWORD_IS_EMPTY=Password is empty
 BaseCommandDialog_USERNAME_IS_EMPTY=Username is empty
 CloneCommandDialog_CLONING_GIT_REPOSITORY=Cloning Git Repository
 CloneCommandDialog_ENTER_GIT_REPOSITORY_URL=Enter Git Repository URL
+CloneDependenciesCommandDialog_CLONING_GIT_REPOSITORY=Cloning Dependencies
+CloneDependenciesCommandDialog_ENTER_GIT_REPOSITORY_URL=Enter default username and password, if needed
 CloneCommandDialog_INVALID_GIT_REPOSITORY_URL=Invalid Git Repository URL
 CommandDialog_COMMIT_MESSAGE=Commit message
 BaseCommandDialog_PASSWORD=Password
