--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/messages.properties
@@ -16,10 +16,12 @@ HardResetCommandHandler_reset=\nIncorrect "username" and/or "password" or "Git r
 HardResetCommandHandler_WHILE_HARD_RESETING_PROJECT_ERROR_OCCURED=While hard reseting project "%s" error occurred
 PullCommandHandler_ERROR_DURING_PULL=Error during pull\!
 PullCommandHandler_NO_PROJECT_IS_SELECTED_FOR_PULL=No project is selected for the Pull action\!
+PullCommandHandler_NO_VALID_PROJECT_IS_SELECTED_FOR_PULL=No valid project is selected for the Pull action\!
 PullCommandHandler_ONLY_ONE_PROJECT_CAN_BE_PULLEDT_AT_A_TIME=Only one project can be pulled at a time\!
 PullCommandHandler_PROJECT_HAS_BEEN_PULLED_FROM_REMOTE_REPOSITORY=Project has been pulled from remote repository\!
 PullCommandHandler_TASK_PULLING_FROM_REMOTE_REPOSITORY=Pulling from Remote Repository
-PullCommandHandler_WHILE_PULLING_PROJECT_ERROR_OCCURED=While pulling project %s error occurred
+PullCommandHandler_WHILE_PULLING_PROJECT_ERROR_OCCUREDEerror occurred while pulling project %s
+PullCommandHandler_PLEASE_SELECT_ONE=Select a cloned project or share this one first 
 CloneDependenciesCommandHandler_NO_PROJECT_IS_SELECTED_FOR_CLONE_DEPENDENCIES=No project is selected for the Clone Dependencies action\!
 PushCommandHandler_CONFLICTING_FILES=Conflicting file(s)
 PushCommandHandler_ERROR_DURING_PUSH=Error during pushing\!
