https://bugs.eclipse.org/bugs/show_bug.cgi?id=501893

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.jgit.connector/src/org/eclipse/dirigible/ide/jgit/command/messages.properties
@@ -25,7 +25,7 @@ PullCommandHandler_PLEASE_SELECT_ONE=Select a cloned project or share this one f
 CloneDependenciesCommandHandler_NO_PROJECT_IS_SELECTED_FOR_CLONE_DEPENDENCIES=No project is selected for the Clone Dependencies action\!
 PushCommandHandler_CONFLICTING_FILES=Conflicting file(s)
 PushCommandHandler_ERROR_DURING_PUSH=Error during pushing\!
-PushCommandHandler_INCORRECT_USERNAME_AND_OR_PASSWORD_OR_GIT_REPOSITORY_URI=\nIncorrect "username" and/or "password" or "Git repository URI"
+PushCommandHandler_INCORRECT_USERNAME_AND_OR_PASSWORD_OR_GIT_REPOSITORY_URI=\nDoublecheck the correctness of the "username" and/or "password" or "Git repository URI"
 PushCommandHandler_NO_PROJECT_IS_SELECTED_FOR_PUSH=No project is selected for the Push action\!
 PushCommandHandler_ONLY_ONE_PROJECT_CAN_BE_PUSHED_AT_A_TIME=Only one project can be pushed at a time\!
 PushCommandHandler_PLEASE_CHECK_IF_PROXY_SETTINGS_ARE_SET_PROPERLY=Please check if proxy settings are set properly
