delete view action added https://bugs.eclipse.org/bugs/show_bug.cgi?id=506140

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.db.viewer/src/org/eclipse/dirigible/ide/db/viewer/views/actions/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.db.viewer/src/org/eclipse/dirigible/ide/db/viewer/views/actions/messages.properties
@@ -1,8 +1,11 @@
 DeleteTableAction_DATABASE_VIEW=Database View
-DeleteTableAction_DELETE_TABLE=Delete
+DeleteTableAction_DELETE_TABLE=Delete Table
+DeleteTableAction_DELETE_VIEW=Delete View
 DeleteTableAction_FAILED_TO_DELETE_TABLE_S=Failed to delete table or view: %s
 DeleteTableAction_WARNING_THIS_ACTION_WILL_DELETE_THE_TABLE_AND_ALL_OF_ITS_CONTENT_CONTINUE=WARNING\! This action will delete '%s' table and all of its content. Continue?
+DeleteTableAction_WARNING_THIS_ACTION_WILL_DELETE_THE_VIEW_CONTINUE=WARNING\! This action will delete '%s' view. Continue?
 DeleteTableAction_WILL_DELETE_THE_TABLE_AND_ITS_CONTENT=Will delete the table and its content
+DeleteTableAction_WILL_DELETE_THE_VIEW=Will delete the view
 RefreshViewAction_REFRESH=Refresh
 RefreshViewAction_REFRESH_DATABASE_BROWSER=Refresh Database Browser
 ShowTableDefinitionAction_OPEN_TABLE_DEFINITION=Open Definition
