--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/create/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.workspace.wizard.project/src/org/eclipse/dirigible/ide/workspace/wizard/project/create/messages.properties
@@ -7,6 +7,7 @@ NewProjectWizardMainPage_PAGE_DESCRIPTION=Enter the name of the new project.
 NewProjectWizardMainPage_PAGE_TITLE=New Project Creation
 NewProjectWizardModel_ERROR_OCCURED_WHEN_TRYING_TO_VALIDATE_NEW_PROJECT_NAME=Error occured when trying to validate new project name.
 NewProjectWizardModel_INVALID_PROJECT_NAME=Invalid project name\!
+NewProjectWizardModel_PUBLISH_PROJECT_FAILED=Publish Project Failed
 NewProjectWizardModel_PROJECT_WITH_NAME_S_WAS_ALREADY_CREATED_FROM_USER_S=Project with name "%s" was already created from user "%s"\!
 NewProjectWizardModel_PROJECT_WITH_THIS_NAME_ALREADY_EXISTS=Project with this name already exists\!
 NewProjectWizardTemplateTypePage_AVAILABLE_TEMPLATES=Available Templates
