Dependent column support https://bugs.eclipse.org/bugs/show_bug.cgi?id=509714

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.js/src/org/eclipse/dirigible/ide/template/ui/js/wizard/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.js/src/org/eclipse/dirigible/ide/template/ui/js/wizard/messages.properties
@@ -12,6 +12,6 @@ JavascriptServiceTemplateTypePage_SELECTION_OF_TEMPLATE_TYPE=Selection of Templa
 JavascriptServiceTemplateTypePage_SERVER_SIDE_JAVA_SCRIPT_GUID_GENERATOR_LIBRARY=Server-Side JavaScript Guid Generator Library
 JavascriptServiceTemplateWizard_CREATE_SCRIPTING_SERVICE=Create Scripting Service
 TablesTemplateTablePage_AVAILABLE_TABLES_AND_VIEWS=Available Tables and Views
-TablesTemplateTablePage_ERROR_ON_LOADING_TABLES_FROM_DATABASE_FOR_GENERATION=Error on Loading Tables from Database for Generation
+TablesTemplateTablePage_ERROR_ON_LOADING_TABLES_FROM_DATABASE_FOR_GENERATION=Error on loading Tables from the Database for generation
 TablesTemplateTablePage_SELECT_THE_TABLE_WHICH_WILL_BE_USED_DURING_GENERATION=Select the table which will be used during generation
 TablesTemplateTablePage_SELECTION_OF_TABLE=Selection of Table
