--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.js/src/org/eclipse/dirigible/ide/template/ui/js/wizard/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.template.ui.js/src/org/eclipse/dirigible/ide/template/ui/js/wizard/messages.properties
@@ -11,6 +11,8 @@ JavascriptServiceTemplateTypePage_SELECT_THE_TYPE_OF_THE_TEMPLATE_WHICH_WILL_BE_
 JavascriptServiceTemplateTypePage_SELECTION_OF_TEMPLATE_TYPE=Selection of Template Type
 JavascriptServiceTemplateTypePage_SERVER_SIDE_JAVA_SCRIPT_GUID_GENERATOR_LIBRARY=Server-Side JavaScript Guid Generator Library
 JavascriptServiceTemplateWizard_CREATE_SCRIPTING_SERVICE=Create Scripting Service
+TableDependentTablePage_SELECT_DEPENDENT_COLUMN=Select dependent column
+TableDependentTablePage_SELECT_THE_DEPENDENT_COLUMN_WHICH_WILL_BE_USED_DURING_GENERATION=Select the dependent column which will be used during generation
 TablesTemplateTablePage_AVAILABLE_TABLES_AND_VIEWS=Available Tables and Views
 TablesTemplateTablePage_ERROR_ON_LOADING_TABLES_FROM_DATABASE_FOR_GENERATION=Error on loading Tables from the Database for generation
 TablesTemplateTablePage_SELECT_THE_TABLE_WHICH_WILL_BE_USED_DURING_GENERATION=Select the table which will be used during generation
