switch for limiting rows in sql console https://bugs.eclipse.org/bugs/show_bug.cgi?id=509783

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.db.viewer/src/org/eclipse/dirigible/ide/db/viewer/views/messages.properties
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/ide/org.eclipse.dirigible.ide.db.viewer/src/org/eclipse/dirigible/ide/db/viewer/views/messages.properties
@@ -1,3 +1,4 @@
+AbstractSQLConsole_LIMIT_RESULTS_TO_100_ROWS=limit results to 100 rows
 DatabaseViewer_DATABASE_VIEW=Database View
 SQLConsole_EXECUTE_QUERY=Query
 SQLConsole_EXECUTE_QUERY_STATEMENT=Query Statement
