--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/i18n/resourceBundle_bg.json
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/i18n/resourceBundle_bg.json
@@ -1,63 +1,63 @@
 {
     "list": {
-        "empty": "Вижте, няма нищо! Бъдете първи и добавете нещо тук!"
+        "empty": "??????????, ???????? ????????! ???????????? ?????????? ?? ???????????????? ???????? ??????!"
     },
     "board": {
-        "last_edit": "последна редакция {0}",
-        "short_text": "Име",
-        "short_text_title": "Кратък текст описващ същината на изложеният въпрос",
-        "description": "Описание",
-        "description_title": "Подробно описание на изложеният въпрос",
-        "avatar_title": "Аватар на потребител {0}",
-        "views_title": "{0} потребителя разгледаха това досега",
+        "last_edit": "???????????????? ???????????????? {0}",
+        "short_text": "??????",
+        "short_text_title": "???????????? ?????????? ?????????????? ???????????????? ???? ???????????????????? ????????????",
+        "description": "????????????????",
+        "description_title": "???????????????? ???????????????? ???? ???????????????????? ????????????",
+        "avatar_title": "???????????? ???? ???????????????????? {0}",
+        "views_title": "{0} ?????????????????????? ???????????????????? ???????? ????????????",
         "comments_stats": {
             "title_0": "{0} {1} ",
-            "comments_num_1": "коментар",
-            "comments_num_many": "коментара",
-            "title_1": "от {0} {1}",
-            "collaborators_1": "потребител",
-            "collaborators_many": "потребители",
-            "none_0": "Все още никой не обсъжда това. Бъдете първи и ",
-            "none_1": "споделете коментар",
-            "lastupd": "Последно обновяване на дискусията {0}"
+            "comments_num_1": "????????????????",
+            "comments_num_many": "??????????????????",
+            "title_1": "???? {0} {1}",
+            "collaborators_1": "????????????????????",
+            "collaborators_many": "??????????????????????",
+            "none_0": "?????? ?????? ?????????? ???? ?????????????? ????????. ???????????? ?????????? ?? ",
+            "none_1": "?????????????????? ????????????????",
+            "lastupd": "???????????????? ???????????????????? ???? ???????????????????? {0}"
         }
     },
     "rating": {
-        "title": "рейтинг",
-        "votes_singular": "{0} вот",
-        "votes_plural": "{0} вота"
+        "title": "??????????????",
+        "votes_singular": "{0} ??????",
+        "votes_plural": "{0} ????????"
     },
     "discussion":{
-        "notsigned_0": "Имате да кажете нещо по този въпрос?", 
-        "notsigned_1": "Влезте в системата", 
-        "notsigned_2": "за да коментирате",
+        "notsigned_0": "?????????? ???? ???????????? ???????? ???? ???????? ?????????????", 
+        "notsigned_1": "???????????? ?? ??????????????????", 
+        "notsigned_2": "???? ???? ??????????????????????",
         "comment":{
-            "said": "каза",
-            "replied": "отговори",
-            "new_title": "Оставете коментар"
+            "said": "????????",
+            "replied": "????????????????",
+            "new_title": "???????????????? ????????????????"
         }
     },   
     "buttons": {
-        "post": "Изпрати",
-        "cancel": "Откажи",
-        "edit": "Редактирай",
-        "delete": "Изтрий",
-        "reply": "Отговори",
-        "more": "Още...",
-        "new": "Нов",
-        "home": "Начало",
-        "search": "Търсене",
-        "settings": "Настройки",
-        "signin": "Вход",
-        "signout": "Изход",
-        "lock": "Заключи",
-        "unlock": "Отключи",        
-        "view_timeline": "Като хронология",
-        "view_thread": "Като разговор"
+        "post": "??????????????",
+        "cancel": "????????????",
+        "edit": "????????????????????",
+        "delete": "????????????",
+        "reply": "????????????????",
+        "more": "??????...",
+        "new": "??????",
+        "home": "????????????",
+        "search": "??????????????",
+        "settings": "??????????????????",
+        "signin": "????????",
+        "signout": "??????????",
+        "lock": "??????????????",
+        "unlock": "??????????????",        
+        "view_timeline": "???????? ????????????????????",
+        "view_thread": "???????? ????????????????"
     },
     "settings": {
-        "title": "Настройки",
-        "username_label": "Потребителско име",
-        "avatar_label": "Изборажение за аватар"
+        "title": "??????????????????",
+        "username_label": "?????????????????????????? ??????",
+        "avatar_label": "?????????????????????? ???? ????????????"
     }
 }
